[package]
name = "vox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Main dependency, used everywhere
bevy = "0.7.0"

# Used to serialize and deserialize chunks
serde = "1.0.137"
bincode = "1.3.3"

# Used to configure and setup voxel::Kind
ron = "0.7.1"

# Used on pipeline::genesis for chunk generation
bracket-noise = "0.8.2"

# Used mainly for tests
rand = "0.8.5"